<resources>
    <string name="app_name">Recipe App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_share">Share</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="action_favorite">Favorite</string>
    <string name="shared_recipes">Shared recipes</string>
    <string name="zero">0</string>
    <string name="username">Username</string>
    <string name="hi">Hi!!</string>
    <string name="see_all">See All</string>
    <string name="categories">Categories</string>
    <string name="let_s_start_cooking_some_incredible_recipes">Let\'s start cooking some incredible recipes!</string>
    <string name="cuisines">Cuisines</string>
    <string name="image_category">image category</string>
    <string name="dish_image">Dish image</string>
    <string name="check_connection">Recipes couldn\'t load. Please check your connection and try again</string>
    <string name="no_internet">No InternetConnection</string>
    <string name="try_again">Try again</string>
    <string name="dishtype">DishType</string>
    <string name="recipe">Recipe</string>
    <string name="meal_details_title">Recipe</string>
    <string name="saved_recipes">Saved recipes</string>
    <string name="favorite_recipes">Favorite recipes</string>
    <string name="profile">Profile</string>
    <string name="meal_image">Meal Image</string>
    <string name="search_recipe">Search recipe...</string>
    <string name="action_search">action_search</string>
    <string name="options_menu">Options Menu</string>
    <string name="recently_viewed">Recent</string>
    <string name="delete_recipe">Delete recipe</string>
    <string name="cuisine_image">cuisine image</string>
    <string name="clear_all">Clear All</string>
    <string name="search_recipes">Search Recipes</string>
    <string name="recently_viewed_text">Recently viewed Recipes will appear here</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="bookmarked_recipes">Bookmarked recipes</string>
    <string name="favorite">Favorite</string>
    <string name="open_nav_drawer">Open navigation drawer</string>
    <string name="close_nav_drawer">Close navigation drawer</string>
    <string name="add_your_recipe">Add your Recipe</string>
    <string name="share_app">Share App</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="ok">Ok</string>
    <string name="edit">Edit</string>
    <string name="africa">Africa</string>
    <string name="dessert">Dessert</string>
    <string name="main_course">Main course</string>
    <string name="food">Food</string>
    <string name="app">App</string>
    <string name="breakfast">Breakfast</string>
    <string name="salad">Salad</string>
    <string name="omelette">Omelette</string>
    <string name="bread">Bread</string>
    <string name="prep">Prep</string>
    <string name="alcohol">Alcohol</string>
    <string name="drinks">Drinks</string>
    <string name="side_dish">Side Dish</string>
    <string name="sauce">Sauce</string>
    <string name="snacks">Snacks</string>
    <string name="cereals">Cereals</string>
    <string name="action_home">Home</string>
    <string name="action_more">More</string>
    <string name="shopping">Add Shopping</string>
</resources>