<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_filled_home_24"
        android:orderInCategory="10"
        android:title="@string/action_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/searchFragment2"
        android:icon="@drawable/ic_search_white_24"
        android:orderInCategory="20"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favoriteRecipeFragment"
        android:icon="@drawable/ic_favorite_24"
        android:orderInCategory="30"
        android:title="@string/action_favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/shoppingFragment"
        android:icon="@drawable/ic_shopping_cart_24"
        android:orderInCategory="40"
        android:title="@string/shopping_cart"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_menu_24"
        android:orderInCategory="50"
        android:title="@string/action_more"
        app:showAsAction="ifRoom" />


</menu>